--- a/7-Classification-kNN.qmd
+++ b/7-Classification-kNN.qmd
@@ -68,11 +68,11 @@ Unlike many algorithms that involve an explicit training phase, kNN follows a *l
 
 When classifying a new observation, the kNN algorithm first computes its *distance* to all data points in the training set, typically using the *Euclidean distance*. It then identifies the *k* nearest neighbors and assigns the most frequent class label among them as the predicted outcome.
 
-@fig-ch7-knn-image illustrates this idea using a toy dataset with two classes: [Class A (orange circles)]{style="color: orange;"} and [Class B (blue squares)]{style="color: blue;"}. A new data point, shown as a *dark star*, must be assigned to one of the two classes. The classification result depends on the chosen value of *k*:
+@fig-ch7-knn-image illustrates this idea using a toy dataset with two classes: [Class A (light-orange circles)]{style="color: #FC8D62;"} and [Class B (soft-green squares)]{style="color: #66C2A5;"}. A new data point, shown as a *dark star*, must be assigned to one of the two classes. The classification result depends on the chosen value of *k*:
 
--   When $k = 3$, the three closest neighbors include two blue squares and one red circle. Since the majority class is *Class B*, the new point is labeled accordingly.
+-   When $k = 3$, the three closest neighbors include two green squares and one light-orange circle. Since the majority class is *Class B*, the new point is labeled accordingly.
 
--   When $k = 6$, the nearest neighbors include four red circles and two blue squares, resulting in a prediction of *Class A*.
+-   When $k = 6$, the nearest neighbors include four light-orange circles and two green squares, resulting in a prediction of *Class A*.
 
 ```{r fig-ch7-knn-image, echo = FALSE, out.width = "52%", fig.cap = "A two-dimensional toy dataset with two classes (Class A and Class B) and a new data point (dark star), illustrating the kNN algorithm with k = 3 and k = 6."}
 knitr::include_graphics("images/ch7_knn.png")
@@ -125,9 +125,9 @@ p +
 
 For new Patient 1, located deep within a cluster of green-circle points (Drug A), the classification is straightforward. All nearest neighbors belong to Drug A, making the prediction clear and confident.
 
-For new Patient 2, the outcome depends on the chosen value of *k*, as shown in the left panel of @fig-ch7-ex-drug-3. When $k = 1$, the nearest neighbor is a blue square, so the predicted class is Drug C. With $k = 2$, there is a tie between Drug B and Drug C, leaving no clear majority. At $k = 3$, two of the three nearest neighbors are blue squares, so the prediction remains Drug C. What happens if we increase *k* even further? The model begins to smooth the decision boundary, reducing noise sensitivity but potentially missing finer local details.
+For new Patient 2, the outcome depends on the chosen value of *k*, as shown in the left panel of @fig-ch7-ex-drug-3. When $k = 1$, the nearest neighbor is a soft-blue square, so the predicted class is Drug C. With $k = 2$, there is a tie between Drug B and Drug C, leaving no clear majority. At $k = 3$, two of the three nearest neighbors are soft-blue squares, so the prediction remains Drug C. What happens if we increase *k* even further? The model begins to smooth the decision boundary, reducing noise sensitivity but potentially missing finer local details.
 
-For new Patient 3, the classification is more uncertain, as seen in the right panel of @fig-ch7-ex-drug-3. With $k = 1$ or $k = 2$, the patient lies nearly equidistant from both red and blue points, leading to an unstable classification. At $k = 3$, the three nearest neighbors each represent a different class, making the prediction entirely ambiguous. What would happen if the patient’s sodium-to-potassium ratio were slightly higher or lower? Even a small shift could move this patient closer to one cluster or another, changing the predicted class entirely. This highlights a key limitation of kNN: when observations fall near class boundaries, prediction confidence decreases sharply.
+For new Patient 3, the classification is more uncertain, as seen in the right panel of @fig-ch7-ex-drug-3. With $k = 1$ or $k = 2$, the patient lies nearly equidistant from both light-orange and soft-blue points, leading to an unstable classification. At $k = 3$, the three nearest neighbors each represent a different class, making the prediction entirely ambiguous. What would happen if the patient’s sodium-to-potassium ratio were slightly higher or lower? Even a small shift could move this patient closer to one cluster or another, changing the predicted class entirely. This highlights a key limitation of kNN: when observations fall near class boundaries, prediction confidence decreases sharply.
 
 ```{r}
 #| label: fig-ch7-ex-drug-3
@@ -143,7 +143,7 @@ p = ggplot(train_set, aes(x = age, y = ratio, color = type, shape = type)) +
   labs(x = "Age", y = "Sodium-to-Potassium Ratio") 
 
 r_x = 3.2; r_y = 2
-size = if(knitr::is_latex_output()) 112 else 113
+size = if(knitr::is_latex_output()) 111 else 113
 
 # For patient 2
 x = test_set$age[2]
@@ -360,8 +360,8 @@ ggplot(data = train_set, aes(x = age, y = ratio)) +
   labs(x = "Age", y = "Sodium/Potassium Ratio") + 
   guides(color = guide_legend(title = "Drug Type"), 
          shape = guide_legend(title = "Drug Type")) +
-  geom_point(data = test_set, aes(x = age, y = ratio), colour = "#E66101", size = 9, shape = 1) +
-  geom_point(data = test_set, aes(x = age, y = ratio), colour = "#E66101", size = 1, shape = 8) +
+  geom_point(data = test_set, aes(x = age, y = ratio), colour = "gray50", size = 9, shape = 1) +
+  geom_point(data = test_set, aes(x = age, y = ratio), colour = "black", size = 1, shape = 8) +
   theme(legend.position = "none")
 
 # To plot the data with proper scaling
@@ -371,8 +371,8 @@ ggplot(data = train_scaled, aes(x = age, y = ratio)) +
   labs(x = "Age", y = "Sodium/Potassium Ratio") + 
   guides(color = guide_legend(title = "Drug Type"), 
          shape = guide_legend(title = "Drug Type")) +
-  geom_point(data = test_scaled, aes(x = age, y = ratio), colour = "#E66101", size = 9, shape = 1) +
-  geom_point(data = test_scaled, aes(x = age, y = ratio), colour = "#E66101", size = 1, shape = 8) +
+  geom_point(data = test_scaled, aes(x = age, y = ratio), colour = "gray50", size = 9, shape = 1) +
+  geom_point(data = test_scaled, aes(x = age, y = ratio), colour = "black", size = 1, shape = 8) +
   theme(legend.position = "none")
 
 # To plot the data with improper scaling
@@ -382,8 +382,8 @@ ggplot(data = train_scaled_wrongly, aes(x = age, y = ratio)) +
   labs(x = "Age", y = "Sodium/Potassium Ratio") + 
   guides(color = guide_legend(title = "Drug Type"), 
          shape = guide_legend(title = "Drug Type")) +
-  geom_point(data = test_scaled_wrongly, aes(x = age, y = ratio), colour = "#E66101", size = 8.5, shape = 1) +
-  geom_point(data = test_scaled_wrongly, aes(x = age, y = ratio), colour = "#E66101", size = 1, shape = 8) +
+  geom_point(data = test_scaled_wrongly, aes(x = age, y = ratio), colour = "gray50", size = 8.5, shape = 1) +
+  geom_point(data = test_scaled_wrongly, aes(x = age, y = ratio), colour = "black", size = 1, shape = 8) +
   theme(legend.position = "none")
 ```
 
