--- a/4-Exploratory-data-analysis.qmd
+++ b/4-Exploratory-data-analysis.qmd
@@ -541,8 +541,8 @@ variable_list = c("intl.mins",  "intl.calls",  "intl.charge",
 
 cor_matrix = cor(churn[, variable_list])
 
-ggcorrplot(cor_matrix, type = "upper", lab = TRUE, lab_size = 2, tl.cex = 8, 
-           colors = c("#6D9EC1", "white", "#E46726"),
+ggcorrplot(cor_matrix, type = "lower", lab = TRUE, lab_size = 2, tl.cex = 8, 
+           colors = c("#699fb3", "white", "#b3697a"),
            title = "Visualization of the Correlation Matrix")
 ```
 
