--- a/0-preface.qmd
+++ b/0-preface.qmd
@@ -190,7 +190,7 @@ column_spec(2, width = "20em")
 
 These datasets were selected to expose readers to a broad range of real-world challenges spanning marketing, finance, customer analytics, and predictive modeling. They appear throughout the book not only in guided examples and code demonstrations but also in comprehensive case studies that follow the full Data Science Workflow.
 
-All datasets from the **liver** package can be loaded directly in R using the `data()` function (for example, `data(churn)`) and explored with standard functions such as `str()`, `summary()`, and `head()`. Readers can also access documentation and original dataset sources through the package reference page at [https://cran.r-project.org/web/packages/liver/refman/liver.html](https://cran.r-project.org/web/packages/liver/refman/liver.html).
+All datasets from the **liver** package can be loaded directly in R using the `data()` function (for example, `data(churn)`) and explored with standard functions such as `str()`, `summary()`, and `head()`. Readers can also access documentation and original dataset sources through the package reference page at <https://cran.r-project.org/web/packages/liver/refman/liver.html>.
 
 Beyond the datasets listed in [Table -@tbl-data-table], the **liver** package includes more than 15 datasets in total. Several of these appear in end-of-chapter exercises, offering readers further opportunities to practice data exploration, modeling, and evaluation across diverse contexts.
 
@@ -226,16 +226,13 @@ Finally, I am grateful to the students of the courses *Data Analytics: Machine L
 
 To everyone who supported this book, your encouragement, feedback, and collaboration have meant more than I can say.
 
-```{=tex}
 \begin{center}
 \textit{All models are wrong, but some are useful.}
 \end{center}
-```
-```{=tex}
 \begin{flushright}
 — George Box
 \end{flushright}
-```
+
 ```{asis echo=knitr::is_html_output()}
 ::: {style="text-align:center; font-style: italic;"}
 All models are wrong, but some are useful.
