--- a/1-Intro-R.qmd
+++ b/1-Intro-R.qmd
@@ -378,12 +378,6 @@ You will encounter many functions throughout this book, from basic operations li
 
 Throughout this book, you will use many built-in functions, often combining them to perform complex tasks in just a few lines of code. For now, focus on understanding how functions are structured and practicing with common examples.
 
-
-
-
-
-
-
 ## Common Operators in R
 
 R provides several types of operators for performing calculations, making comparisons, and combining logical conditions. These operators form the foundation of most expressions in R and are used throughout data analysis workflows.
@@ -420,24 +414,62 @@ x > 5 | y < 5   # at least one condition must be TRUE
 knitr::include_graphics("images/ch1_logic_operators.png")
 ```
 
-A concise overview of the most frequently used operators is given in Table [-@tbl-common-operators].
+A concise overview of these operators, grouped by their function, is presented in Table [-@tbl-common-operators]. These operators are fundamental to working with data in R, particularly when selecting subsets, defining conditions, or constructing logical expressions.
+Beyond these basic arithmetic and logical operators, R also provides special operators, introduced next.
 
+::: {.content-visible when-format="html"}
 ::: {#tbl-common-operators .table}
 
-| *Category* | *Operator*                       | *Meaning*                                                       |                      |
-| :--------- | :------------------------------- | :-------------------------------------------------------------- | -------------------- |
-| Arithmetic | `+`, `-`, `*`, `/`, `^`          | Addition, subtraction, multiplication, division, exponentiation |                      |
-| Relational | `==`, `!=`, `<`, `>`, `<=`, `>=` | Comparison (equal to, not equal to, less/greater than, etc.)    |                      |
-| Logical    | `&`, `                           | `, `!`                                                          | Logical AND, OR, NOT |
-| Assignment | `<-`, `->`, `=`                  | Assign values to objects                                        |                      |
-| Membership | `%in%`                           | Tests if an element belongs to a vector                         |                      |
-| Sequence   | `:`                              | Generates sequences of numbers                                  |                      |
+| *Category* | *Operator*                       | *Meaning*                                                       |
+|:-----------|:---------------------------------|:----------------------------------------------------------------|
+| Arithmetic | `+`, `-`, `*`, `/`, `^`          | Addition, subtraction, multiplication, division, exponentiation |
+| Relational | `==`, `!=`, `<`, `>`, `<=`, `>=` | Comparison (equal to, not equal to, less/greater than, etc.)    |
+| Logical    | `&`, `|`, `!`                    | Logical AND, OR, NOT                                            |
+| Assignment | `<-`, `->`, `=`                  | Assign values to objects                                        |
+| Membership | `%in%`                           | Tests if an element belongs to a vector                         |
+| Sequence   | `:`                              | Generates sequences of numbers                                  |
 
-Common operators in R
+Overview of arithmetic, relational, and logical operators in R, along with assignment, membership, and sequence operators frequently used in data analysis
+:::
 :::
 
-These operators are fundamental to working with data in R, particularly when selecting subsets, defining conditions, or constructing logical expressions.
-Beyond these basic arithmetic and logical operators, R also provides special operators, introduced next.
+```{=latex}
+\begingroup
+\setlength{\LTpre}{6pt}\setlength{\LTpost}{6pt}
+\begin{longtable}{p{2.6cm}p{3.6cm}p{6.8cm}}
+\caption{Overview of arithmetic, relational, and logical operators in R, along with assignment, membership, and sequence operators frequently used in data analysis.}
+\label{tbl-common-operators}\\
+\toprule
+\textbf{Category} & \textbf{Operator} & \textbf{Meaning} \\
+\midrule
+\endfirsthead
+\toprule
+\textbf{Category} & \textbf{Operator} & \textbf{Meaning} \\
+\midrule
+\endhead
+Arithmetic &
+\texttt{+}, \texttt{-}, \texttt{*}, \texttt{/}, \texttt{\^{}} &
+Addition, subtraction, multiplication, division, exponentiation \\
+Relational &
+\texttt{==}, \texttt{!=}, \texttt{<}, \texttt{>}, \texttt{<=}, \texttt{>=} &
+Comparison (equal to, not equal to, less/greater than, etc.) \\
+Logical &
+\texttt{\&}, \texttt{\textbar}, \texttt{!} &
+Logical AND, OR, NOT \\
+Assignment &
+\texttt{<-}, \texttt{->}, \texttt{=} &
+Assign values to objects \\
+Membership &
+\texttt{\%in\%} &
+Tests if an element belongs to a vector \\
+Sequence &
+\texttt{:} &
+Generates sequences of numbers \\
+\bottomrule
+\end{longtable}
+\endgroup
+```
+
 
 ## Special Operators in R
 
