--- a/-span-style=-color--0056B3--Data-Science-Foundations-and-Machine-Learning-with-R--From-Data-to-Decisions--span-.tex
+++ b/-span-style=-color--0056B3--Data-Science-Foundations-and-Machine-Learning-with-R--From-Data-to-Decisions--span-.tex
@@ -306,7 +306,7 @@
 \title{{Data Science Foundations and Machine Learning with R: From Data
 to Decisions}}
 \author{\href{https://www.uva.nl/profile/a.mohammadi}{{Reza Mohammadi}}}
-\date{26 October 2025}
+\date{27 October 2025}
 
 \begin{document}
 \maketitle
@@ -794,7 +794,6 @@ collaboration have meant more than I can say.
 \begin{center}
 \textit{All models are wrong, but some are useful.}
 \end{center}
-
 \begin{flushright}
 — George Box
 \end{flushright}
@@ -1529,6 +1528,128 @@ combining them to perform complex tasks in just a few lines of code. For
 now, focus on understanding how functions are structured and practicing
 with common examples.
 
+\section{Common Operators in R}\label{common-operators-in-r}
+
+R provides several types of operators for performing calculations,
+making comparisons, and combining logical conditions. These operators
+form the foundation of most expressions in R and are used throughout
+data analysis workflows.
+
+Arithmetic operators include \texttt{+}, \texttt{-}, \texttt{*},
+\texttt{/}, and \texttt{\^{}}, which represent addition, subtraction,
+multiplication, division, and exponentiation, respectively. Their
+behavior follows standard mathematical rules:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{x }\OtherTok{\textless{}{-}} \DecValTok{2}
+\NormalTok{y }\OtherTok{\textless{}{-}} \DecValTok{3}
+\NormalTok{x }\SpecialCharTok{+}\NormalTok{ y     }\CommentTok{\# addition}
+\NormalTok{   [}\DecValTok{1}\NormalTok{] }\DecValTok{5}
+\NormalTok{x }\SpecialCharTok{/}\NormalTok{ y     }\CommentTok{\# division}
+\NormalTok{   [}\DecValTok{1}\NormalTok{] }\FloatTok{0.6666667}
+\NormalTok{x}\SpecialCharTok{\^{}}\NormalTok{y       }\CommentTok{\# exponentiation}
+\NormalTok{   [}\DecValTok{1}\NormalTok{] }\DecValTok{8}
+\end{Highlighting}
+\end{Shaded}
+
+Relational operators compare values and return logical results
+(\texttt{TRUE} or \texttt{FALSE}). The most common are \texttt{==}
+(equal to), \texttt{!=} (not equal to), \texttt{\textless{}},
+\texttt{\textgreater{}}, \texttt{\textless{}=}, and
+\texttt{\textgreater{}=}:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{x }\SpecialCharTok{==}\NormalTok{ y    }\CommentTok{\# is x equal to y?}
+\NormalTok{   [}\DecValTok{1}\NormalTok{] }\ConstantTok{FALSE}
+\NormalTok{x }\SpecialCharTok{!=}\NormalTok{ y    }\CommentTok{\# is x not equal to y?}
+\NormalTok{   [}\DecValTok{1}\NormalTok{] }\ConstantTok{TRUE}
+\NormalTok{x }\SpecialCharTok{\textgreater{}}\NormalTok{ y     }\CommentTok{\# is x greater than y?}
+\NormalTok{   [}\DecValTok{1}\NormalTok{] }\ConstantTok{FALSE}
+\end{Highlighting}
+\end{Shaded}
+
+Logical operators combine or invert logical values---\texttt{\&} (and),
+\texttt{\textbar{}} (or), and \texttt{!} (not)---and are particularly
+useful when filtering data or defining conditions. Figure
+\ref{fig-logic-operators} illustrates their behavior:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{x }\SpecialCharTok{\textgreater{}} \DecValTok{5} \SpecialCharTok{\&}\NormalTok{ y }\SpecialCharTok{\textless{}} \DecValTok{5}   \CommentTok{\# both conditions must be TRUE}
+\NormalTok{   [}\DecValTok{1}\NormalTok{] }\ConstantTok{FALSE}
+\NormalTok{x }\SpecialCharTok{\textgreater{}} \DecValTok{5} \SpecialCharTok{|}\NormalTok{ y }\SpecialCharTok{\textless{}} \DecValTok{5}   \CommentTok{\# at least one condition must be TRUE}
+\NormalTok{   [}\DecValTok{1}\NormalTok{] }\ConstantTok{TRUE}
+\SpecialCharTok{!}\NormalTok{(x }\SpecialCharTok{==}\NormalTok{ y)       }\CommentTok{\# negation}
+\NormalTok{   [}\DecValTok{1}\NormalTok{] }\ConstantTok{TRUE}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{figure}[H]
+
+\centering{
+
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{images/ch1_logic_operators.png}
+
+}
+
+\caption{\label{fig-logic-operators}Set of Boolean operators. The
+left-hand circle (\texttt{x}) and the right-hand circle (\texttt{y})
+represent logical operands. The green-shaded areas indicate which values
+are returned as TRUE by each operator.}
+
+\end{figure}%
+
+A concise overview of these operators, grouped by their function, is
+presented in Table \ref{tbl-common-operators}. These operators are
+fundamental to working with data in R, particularly when selecting
+subsets, defining conditions, or constructing logical expressions.
+Beyond these basic arithmetic and logical operators, R also provides
+special operators, introduced next.
+
+\begingroup
+\setlength{\LTpre}{6pt}\setlength{\LTpost}{6pt}
+
+\begin{longtable}{p{2.6cm}p{3.6cm}p{6.8cm}}
+
+\caption{\label{tbl-common-operators}Overview of arithmetic, relational, and logical operators in R, along with assignment, membership, and sequence operators frequently used in data analysis.}
+
+\tabularnewline
+
+\\
+\toprule
+\textbf{Category} & \textbf{Operator} & \textbf{Meaning} \\
+\midrule
+\endfirsthead
+\toprule
+\textbf{Category} & \textbf{Operator} & \textbf{Meaning} \\
+\midrule
+\endhead
+Arithmetic &
+\texttt{+}, \texttt{-}, \texttt{*}, \texttt{/}, \texttt{\^{}} &
+Addition, subtraction, multiplication, division, exponentiation \\
+Relational &
+\texttt{==}, \texttt{!=}, \texttt{<}, \texttt{>}, \texttt{<=}, \texttt{>=} &
+Comparison (equal to, not equal to, less/greater than, etc.) \\
+Logical &
+\texttt{\&}, \texttt{\textbar}, \texttt{!} &
+Logical AND, OR, NOT \\
+Assignment &
+\texttt{<-}, \texttt{->}, \texttt{=} &
+Assign values to objects \\
+Membership &
+\texttt{\%in\%} &
+Tests if an element belongs to a vector \\
+Sequence &
+\texttt{:} &
+Generates sequences of numbers \\
+\bottomrule
+
+\end{longtable}
+
+\endgroup
+
 \section{Special Operators in R}\label{special-operators-in-r}
 
 As you begin composing multi-step analyses, a few operators can make R
@@ -1538,20 +1659,23 @@ the pipe operators \texttt{\%\textgreater{}\%} (from the \emph{magrittr}
 and \emph{dplyr} packages) and \texttt{\textbar{}\textgreater{}} (base
 R), and the namespace operator \texttt{::}.
 
+Readers who are new to R do not need to master these operators
+immediately. The aim here is simply to make you familiar with them,
+since they frequently appear in online examples and in code generated by
+AI tools such as ChatGPT. In my experience, students often encounter
+these operators when seeking help with R, which is why a short overview
+is included in this book.
+
 Pipes express a sequence of operations from left to right. Instead of
-nesting functions, you write one step per line, which improves the
-readability of data manipulation code. The two pipe operators serve the
-same purpose but differ slightly in syntax and origin.
+nesting functions, you write one step per line. This makes data
+manipulation code more structured and easier to read. The two pipe
+operators serve the same purpose but differ slightly in syntax and
+origin.
 
-\subsection*{\texorpdfstring{The \texttt{\%\textgreater{}\%} Operator
-(from
-\emph{magrittr}/\emph{dplyr})}{The \%\textgreater\% Operator (from magrittr/dplyr)}}\label{the-operator-from-magrittrdplyr}
-\addcontentsline{toc}{subsection}{The \texttt{\%\textgreater{}\%}
-Operator (from \emph{magrittr}/\emph{dplyr})}
-
-The \texttt{\%\textgreater{}\%} operator passes the left-hand side (LHS)
-as the first argument to the function on the right-hand side (RHS). It
-is part of \emph{magrittr} and widely used in \emph{dplyr} workflows.
+The \texttt{\%\textgreater{}\%} operator passes the result of one
+expression as the first argument to the next function. It is part of
+\emph{magrittr} and is widely used in \emph{dplyr} workflows for data
+transformation and summarisation:
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1566,48 +1690,16 @@ is part of \emph{magrittr} and widely used in \emph{dplyr} workflows.
 \end{Shaded}
 
 This can be read as: take \texttt{mtcars}, filter to six cylinders, then
-compute a summary.
+compute a summary. In practice, it is good style to keep each pipeline
+short and meaningful---for example,
+\texttt{filter\ →\ mutate\ →\ summarise}. When a step becomes complex,
+it is clearer to store it in a variable rather than extending the chain.
 
-Two useful patterns demonstrate its flexibility:
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\CommentTok{\# Pipe into a non–first argument using the placeholder \textasciigrave{}.\textasciigrave{}}
-\NormalTok{mtcars }\SpecialCharTok{\%\textgreater{}\%} \FunctionTok{mutate}\NormalTok{(}\AttributeTok{hp\_scaled =}\NormalTok{ hp }\SpecialCharTok{/} \DecValTok{100}\NormalTok{) }\SpecialCharTok{\%\textgreater{}\%} \FunctionTok{quantile}\NormalTok{(., }\AttributeTok{probs =} \FloatTok{0.9}\NormalTok{)}
-
-\CommentTok{\# Apply a short inline expression}
-\NormalTok{mtcars }\SpecialCharTok{\%\textgreater{}\%}\NormalTok{ \{ .[.}\SpecialCharTok{$}\NormalTok{mpg }\SpecialCharTok{\textgreater{}} \DecValTok{25}\NormalTok{, }\FunctionTok{c}\NormalTok{(}\StringTok{"mpg"}\NormalTok{, }\StringTok{"hp"}\NormalTok{)] \}}
-\end{Highlighting}
-\end{Shaded}
-
-Good practice with \texttt{\%\textgreater{}\%}:
-
-\begin{itemize}
-\tightlist
-\item
-  Keep each step short and purposeful (for example,
-  \texttt{filter\ →\ mutate\ →\ summarise}).
-\item
-  If a step becomes complex, assign it to a variable rather than
-  extending the pipeline.
-\item
-  Prefer named arguments for readability.
-\end{itemize}
-
-The next operator, \texttt{\textbar{}\textgreater{}}, was introduced in
-base R and provides a similar but simpler mechanism for chaining
-functions without loading additional packages.
-
-\subsection*{\texorpdfstring{The \texttt{\textbar{}\textgreater{}}
-Operator (base R, R ≥
-4.1)}{The \textbar\textgreater{} Operator (base R, R ≥ 4.1)}}\label{the-operator-base-r-r-4.1}
-\addcontentsline{toc}{subsection}{The \texttt{\textbar{}\textgreater{}}
-Operator (base R, R ≥ 4.1)}
-
-The base pipe \texttt{\textbar{}\textgreater{}} behaves much like
-\texttt{\%\textgreater{}\%}, passing the LHS as the first argument to
-the RHS function. Because it is built into R, no extra packages are
-needed.
+A similar but simpler operator, \texttt{\textbar{}\textgreater{}}, was
+introduced in base R (version 4.1). It behaves much like
+\texttt{\%\textgreater{}\%}, passing the output of one expression to the
+first argument of the next function, but requires no additional
+packages:
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1618,60 +1710,62 @@ needed.
 \end{Highlighting}
 \end{Shaded}
 
-\begin{quote}
-\textbf{Readability tip:} Pipes make code clearer, but they are not
-mandatory. Use them when they simplify logic, and break pipelines that
-become long or difficult to follow.
-\end{quote}
+In general, \texttt{\%\textgreater{}\%} offers greater flexibility and
+integrates naturally with tidyverse packages, while
+\texttt{\textbar{}\textgreater{}} is ideal for base R workflows with
+minimal dependencies. Pipes improve readability but are not essential;
+use them when they simplify logic and avoid long sequences that are
+difficult to follow.
 
-While pipes simplify the flow of data between functions, the \texttt{::}
-operator serves a different role: it identifies exactly which package a
-function belongs to, improving transparency.
+RStudio provides a convenient keyboard shortcut for inserting the pipe
+operator (\texttt{Ctrl/Cmd\ +\ Shift\ +\ M}). You can configure it to
+use the native pipe \texttt{\textbar{}\textgreater{}} instead of
+\texttt{\%\textgreater{}\%} as shown in Figure \ref{fig-native-pipe}. To
+do this, open the \emph{Tools} menu, select \emph{Global
+Options\ldots{}}, and then choose \emph{Code} from the left panel. Under
+the \emph{Editing} tab, check the box labeled \emph{Use native pipe
+operator, \texttt{\textbar{}\textgreater{}}}, and click \emph{OK} to
+save your changes.
 
-\subsection*{\texorpdfstring{Calling Functions from a Specific Package
-with
-\texttt{::}}{Calling Functions from a Specific Package with ::}}\label{calling-functions-from-a-specific-package-with}
-\addcontentsline{toc}{subsection}{Calling Functions from a Specific
-Package with \texttt{::}}
+\begin{figure}[H]
 
-When multiple packages define functions with the same name, \texttt{::}
-ensures that you call the intended one without loading the entire
-package.
+\centering{
+
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{images/ch1_native_pipe.png}
+
+}
+
+\caption{\label{fig-native-pipe}Enabling the \emph{Use native pipe
+operator (\texttt{\textbar{}\textgreater{}})} option under \emph{Tools
+\textgreater{} Global Options \textgreater{} Code \textgreater{}
+Editing} in RStudio.}
+
+\end{figure}%
+
+While pipes control how data move between functions, the \texttt{::}
+operator serves a different purpose: it specifies which package a
+function belongs to. This is particularly useful when several packages
+define functions with the same name, as it allows you to call one
+explicitly without loading the entire package:
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\CommentTok{\# Call a function explicitly from a package\textquotesingle{}s namespace}
 \NormalTok{liver}\SpecialCharTok{::}\FunctionTok{partition}\NormalTok{()}
-
-\CommentTok{\# Build a plot using ggplot2 functions without loading the package}
-\NormalTok{ggplot2}\SpecialCharTok{::}\FunctionTok{ggplot}\NormalTok{(mtcars, ggplot2}\SpecialCharTok{::}\FunctionTok{aes}\NormalTok{(mpg, hp)) }\SpecialCharTok{+}\NormalTok{ ggplot2}\SpecialCharTok{::}\FunctionTok{geom\_point}\NormalTok{()}
 \end{Highlighting}
 \end{Shaded}
 
 This approach clarifies dependencies and supports reproducibility,
-especially in collaborative projects. (Advanced users may encounter
-\texttt{:::}, which accesses non-exported functions, but this is
-generally discouraged.)
-
-Quick comparison of the three operators:
-
-\begin{itemize}
-\tightlist
-\item
-  \texttt{\%\textgreater{}\%} (\emph{magrittr}): Common in tidyverse
-  workflows; supports the \texttt{.} placeholder and inline expressions.
-\item
-  \texttt{\textbar{}\textgreater{}} (base R): Built-in and
-  dependency-free; use anonymous functions for non--first arguments.
-\item
-  \texttt{::}: Calls a function explicitly from a specific package,
-  improving clarity and reproducibility.
-\end{itemize}
+particularly in collaborative projects. Advanced users may encounter
+\texttt{:::}, which accesses non-exported functions, but this practice
+is discouraged because such functions may change or disappear in future
+versions.
 
 Although this book focuses on data science applications rather than
-programming conventions, familiarity with these operators is valuable.
-They make code concise, expressive, and easier to share. Later chapters
-use them selectively to balance clarity with accessibility.
+programming conventions, understanding these operators will help you
+write modern, reproducible R code. They make analyses concise,
+expressive, and transparent. In later chapters, they will appear
+selectively---used when they enhance clarity without obscuring the logic
+of the analysis.
 
 \section{Import Data into R}\label{sec-ch1-import-data}
 
@@ -2718,7 +2812,7 @@ the built-in \emph{mtcars} dataset:
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-55-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-58-1.pdf}
 \end{center}
 
 In this example:
@@ -2789,7 +2883,7 @@ using a smoothed trend line:
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-57-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-60-1.pdf}
 \end{center}
 
 This plot shows the general pattern in the data, helping you see whether
@@ -2807,7 +2901,7 @@ instance, layering a scatter plot with a smooth trend line:
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-58-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-61-1.pdf}
 \end{center}
 
 The order of layers matters: here, the trend line is plotted first, and
@@ -2852,7 +2946,7 @@ the color of each point to the number of cylinders in a car:
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-60-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-63-1.pdf}
 \end{center}
 
 Because \texttt{color\ =\ cyl} is inside \texttt{aes()}, the color is
@@ -2879,13 +2973,13 @@ Other aesthetics you can vary include \texttt{size}, \texttt{alpha}
 
 \begin{minipage}{0.50\linewidth}
 \begin{center}
-\pandocbounded{\includegraphics[keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-61-1.pdf}}
+\pandocbounded{\includegraphics[keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-64-1.pdf}}
 \end{center}
 \end{minipage}%
 %
 \begin{minipage}{0.50\linewidth}
 \begin{center}
-\pandocbounded{\includegraphics[keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-61-2.pdf}}
+\pandocbounded{\includegraphics[keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-64-2.pdf}}
 \end{center}
 \end{minipage}%
 
@@ -2905,7 +2999,7 @@ all points blue or using a custom color---set the attributes
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-62-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-65-1.pdf}
 \end{center}
 
 You can specify colors either by name (e.g., \texttt{color\ =\ "blue"})
@@ -3077,7 +3171,7 @@ mean 10 and standard deviation 2.
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-66-1.pdf}
+\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-69-1.pdf}
 \end{center}
 
 You can also simulate multiple variables and combine them into a data
@@ -3717,7 +3811,7 @@ Exercises}\label{more-challenging-exercises}
 \end{Shaded}
 
 \begin{center}
-\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-71-1.pdf}
+\includegraphics[width=0.65\linewidth,height=\textheight,keepaspectratio]{1-Intro-R_files/figure-pdf/unnamed-chunk-74-1.pdf}
 \end{center}
 
 \begin{enumerate}
@@ -9012,9 +9106,9 @@ hypothesis testing is subject to two types of error, summarized in
 Table~\ref{tbl-hypothesis-errors}.
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.2500}}
-  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.3889}}
-  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.3611}}@{}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.1628}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.4341}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.4031}}@{}}
 \caption{Possible outcomes of hypothesis testing, with two correct
 decisions and two types of
 error.}\label{tbl-hypothesis-errors}\tabularnewline
